--- a/rumours/build.gradle
+++ b/rumours/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.1.0'
 }
 
 mainClassName = 'blargh.rpg.Runner'
