--- a/rumours/build.gradle
+++ b/rumours/build.gradle
@@ -32,4 +32,18 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.1.0'
 }
 
+sourceSets {
+    main {
+         java {
+            srcDirs = ['src']
+         }
+    }
+
+    test {
+        java {
+            srcDirs = ['test']
+        }
+    }
+}
+
 mainClassName = 'blargh.rpg.Runner'
